<resources>
    <string name="app_name">SchoolScheduleJava</string>
    <string name="create_sample_data">Create sample data</string>
    <string name="delete_all_sample_data">Delete all sample data</string>
    <string name="all_deleted">All terms deleted</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="dash">-</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="add_new_term">Add New Term</string>
    <string name="new_term">New Term</string>
    <string name="pick_date">Term Start</string>
    <string name="status">Status:</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="email_address">emailAddress</string>
    <string name="main_activity_label">School Schedule</string>
    <string name="add_term_activity_label">Add Term</string>
    <string name="view_term_activity_label">View Term</string>
    <string name="term_start">Term Start:</string>
    <string name="term_start_note">Note: Term will start on the first day of the selected Month</string>
    <string name="add_term">Add Term</string>
    <string name="add_course">Add Course</string>
    <string name="term_title">termTitle</string>
    <string name="course_end">Course End:</string>
    <string name="course_name">Course Name</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="course_mentor_information">Course Mentor Information</string>
    <string name="course_view">Course View</string>
    <string name="course_status">Course Status:</string>
    <string name="assessments">Assessments</string>
    <string name="assessments_info">Assessments Info:</string>
    <string name="new_note">New Note</string>
    <string name="course_list">Course List</string>
    <string name="delete_term">Delete Term</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit_course">Edit Course</string>
    <string name="course_start">Course Start</string>
    <string name="notes">Notes:</string>
    <string name="pencil_icon">pencil icon</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="cancel">Cancel</string>
    <string name="assessment_name">Assessment Name:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="assessment_date">Assessment Date</string>
    <string name="channel_name">School Schedule Notification</string>
    <string name="channel_description">Notification about school schedule</string>
    <string name="reminder_icon">reminder icon</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="view_assessments">View Assessments</string>
    <string name="share_icon">Share Icon</string>
</resources>
