<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay"
    tools:context=".AddCourseActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ceCourseName"
            android:layout_width="414dp"
            android:layout_height="47dp"
            android:gravity="center"
            android:hint="@string/course_name"
            android:importantForAutofill="no"
            android:inputType=""
            android:text="@string/course_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ceCourseStartLbl"
            android:layout_width="113dp"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/course_start"
            android:textSize="18sp" />

        <CalendarView
            android:id="@+id/ceCourseStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/ceCourseEndLbl"
            android:layout_width="113dp"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/course_end"
            android:textSize="18sp" />

        <CalendarView
            android:id="@+id/ceCourseEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/ceStatusLbl"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="start"
            android:text="@string/course_status"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/ceStatusSpinner"
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <TextView
            android:id="@+id/ceMentorLbl"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="start"
            android:text="@string/course_mentor_information"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ceMentorName"
            android:layout_width="414dp"
            android:layout_height="47dp"
            android:gravity="start"
            android:hint="@string/mentor_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/mentor_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ceMentorEmail"
            android:layout_width="414dp"
            android:layout_height="47dp"
            android:gravity="start"
            android:hint="@string/mentor_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@string/mentor_email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ceMentorPhone"
            android:layout_width="414dp"
            android:layout_height="47dp"
            android:gravity="start"
            android:hint="@string/mentor_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:text="@string/mentor_phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ceNotesList"
            android:layout_width="402dp"
            android:layout_height="450dp"
            android:ems="10"
            android:gravity="start"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@+id/cvNotes" />

    </LinearLayout>

</ScrollView>
