<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_assessment"
        android:textSize="24sp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/assessmentNameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_name"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/addAssessment"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/assessmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="4dp"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/assessmentNameLbl"
        app:layout_constraintLeft_toLeftOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/assessmentTypeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_type"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/assessmentName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/addAssessmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:textSize="18dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/assessmentTypeLbl"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/assessmentDateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessment_date"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/addAssessmentSpinner"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <CalendarView
        android:id="@+id/assessmentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/assessmentDateLbl"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>