<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imageDocIcon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/bookmark_icon"
        android:src="@drawable/ic_book_open_outline_black_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCourse"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/dummy_text"
        android:textColor="@color/list_item_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/imageDocIcon"
        app:layout_constraintStart_toEndOf="@+id/imageDocIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCourseDates"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:gravity="start"
        android:singleLine="true"
        android:text="@string/dummy_text"
        android:textColor="@color/list_item_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/imageDocIcon"
        app:layout_constraintTop_toBottomOf="@+id/tvCourse" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:textSize="14sp"
        android:text="@string/status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCourseDates" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:textSize="14sp"
        android:text="@string/dummy_text"
        app:layout_constraintLeft_toRightOf="@id/statusLabel"
        app:layout_constraintTop_toBottomOf="@id/tvCourseDates" />

    <TextView
        android:id="@+id/tvMentorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@string/mentor_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus" />

    <TextView
        android:id="@+id/tvMentorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@string/email_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMentorName" />

    <TextView
        android:id="@+id/tvMentorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@android:string/emptyPhoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMentorEmail" />

</android.support.constraint.ConstraintLayout>