<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_term"
            android:textSize="24sp"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/termNameLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_term"
            android:textSize="18sp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/addTerm"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/termName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/termNameLbl"
            app:layout_constraintLeft_toLeftOf="parent"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/termStartLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_type"
            android:textSize="18sp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/termName"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <CalendarView
            android:id="@+id/termStart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="4dp"
            app:layout_constraintTop_toBottomOf="@id/termStartLbl"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>